k8/pg-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: pg
  name: pg
  namespace: srav
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: pg
    spec:
      containers:
      - image: docker.app.synaltic.eu/savoirrouler/pg
        name: pg
        ports:
        - containerPort: 5432
        resources: {}
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
status: {}
