k8/back-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: back-end
  name: back-service
  namespace: srav
spec:
  ports:
  - name: "3000"
    port: 80
    targetPort: 3001
  selector:
    io.kompose.service: back-end
status:
  loadBalancer: {}
