k8/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: srav
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-service
spec:
  ports:
  - name: "3000"
    port: 80
    targetPort: 3000
  selector:
    io.kompose.service: front-end
status:
  loadBalancer: {}
